--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 	      position: relative;
 
 	  	}
-	  	/*全屏时也隐藏默认控制器*/
+	  	/*视频全屏时也会默认控件*/
 	  	main > video::-webkit-media-controls{
 	  	  display: none !important
 	  	}
